--- a/shop_django/M/accounts/templates/accounts/register.html
+++ b/shop_django/M/accounts/templates/accounts/register.html
@@ -1,18 +1,32 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'accounts/css/register_styles.css' %}">
+
     <meta charset="UTF-8">
     <title>Register</title>
+    <style>
+        .gradient-custom {
+            /* fallback for old browsers */
+            background: #6a11cb;
+
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+        }
+    </style>
+
+
 </head>
-<body>
+<body style="gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))">
 <form action="" method="post">
     {% csrf_token %}
-    <section class=" gradient-custom">
+    <section class="vh-100 gradient-custom">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -31,7 +45,6 @@
 
 
                                 <button class="btn btn-outline-light btn-lg px-5" type="submit">Register</button>
-
 
 
                             </div>
