--- a/shop_django/M/accounts/templates/accounts/login.html
+++ b/shop_django/M/accounts/templates/accounts/login.html
@@ -1,10 +1,22 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="{% static 'accounts/css/login_styles.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Login</title>
+    <style>
+        .gradient-custom {
+            /* fallback for old browsers */
+            background: #6a11cb;
+
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+        }
+    </style>
 </head>
 <body>
 <section class="vh-100 gradient-custom">
@@ -19,26 +31,21 @@
                             <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
                             <p class="text-white-50 mb-5">Please enter your login and password!</p>
 
-                            <div class="form-outline form-white mb-4">
-                                <input type="email" id="typeEmailX" class="form-control form-control-lg"/>
-                                <label class="form-label" for="typeEmailX">Email</label>
-                            </div>
+                                <div class="form-outline form-white mb-4">
+                                    {{ form.as_p }}
 
-                            <div class="form-outline form-white mb-4">
-                                <input type="password" id="typePasswordX" class="form-control form-control-lg"/>
-                                <label class="form-label" for="typePasswordX">Password</label>
-                            </div>
+                                </div>
 
                             <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
 
                             <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
 
 
-
                         </div>
 
                         <div>
-                            <p class="mb-0">Don't have an account? <a href="{% url 'accounts:user_register' %}" class="text-white-50 fw-bold">Register</a>
+                            <p class="mb-0">Don't have an account? <a href="{% url 'accounts:user_register' %}"
+                                                                      class="text-white-50 fw-bold">Register</a>
                             </p>
                         </div>
 
