--- a/shop_django/M/accounts/templates/accounts/login.html
+++ b/shop_django/M/accounts/templates/accounts/login.html
@@ -25,23 +25,28 @@
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                 <div class="card bg-dark text-white" style="border-radius: 1rem;">
                     <div class="card-body p-5 text-center">
+                        <form action="" method="post">
+                            <div class="mb-md-5 mt-md-4 pb-5">
 
-                        <div class="mb-md-5 mt-md-4 pb-5">
-
-                            <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                            <p class="text-white-50 mb-5">Please enter your login and password!</p>
+                                <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                                <p class="text-white-50 mb-5">Please enter your login and password!</p>
 
                                 <div class="form-outline form-white mb-4">
+                                    {% csrf_token %}
                                     {{ form.as_p }}
 
                                 </div>
 
-                            <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                                <p class="small mb-5 pb-lg-2"><a class="text-white-50"
+                                                                 href="{% url 'accounts:reset_password' %}">Forgot
+                                    password?</a>
+                                </p>
 
-                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
 
 
-                        </div>
+                            </div>
+                        </form>
 
                         <div>
                             <p class="mb-0">Don't have an account? <a href="{% url 'accounts:user_register' %}"
