Accounts | password_reset_complete.html| Add navbar to this page

--- a/shop_django/M/accounts/templates/accounts/password_reset_complete.html
+++ b/shop_django/M/accounts/templates/accounts/password_reset_complete.html
@@ -17,8 +17,39 @@
             background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
         }
     </style>
+        <script src="https://kit.fontawesome.com/5d2b8db846.js" crossorigin="anonymous"></script>
+    <link rel="icon"
+          href='https://www.flaticon.com/download/icon/179309?icon_id=179309&author=196&team=196&keyword=Apple&pack=packs%2Flogotypes&style=107&format=png&color=&colored=2&size=512&selection=1&premium=0&type=standard&search=apple'
+          type="image/icon type">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="{% url 'home:store' %}"><i class="fa-solid fa-store"></i> Store</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                        href="{% url 'home:home' %}"><i class="fa-solid fa-house"></i></a></li>
+                {% if request.user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:user_logout' %}"><i
+                            class="fa-solid fa-right-from-bracket"></i></a></li>
+                    <li class="nav-item d-flex justify-content-end"><a class="nav-link"
+                                                                       href="{% url 'accounts:user_logout' %}"><i
+                            class="fa-solid fa-user"></i></a></li>
+                {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:user_login' %}"><i
+                            class="fa-solid fa-right-to-bracket"></i></a></li>
+
+                {% endif %}
+
+
+            </ul>
+        </div>
+    </div>
+</nav>
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
