--- a/shop_django/M/home/templates/home/index.html
+++ b/shop_django/M/home/templates/home/index.html
@@ -8,30 +8,40 @@
     <meta name="author" content=""/>
     <title>Frenzy Store</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="{% static 'home/assets/favicon.ico' %}"/>
+
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{% static 'home/css/styles.css' %}" rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/5d2b8db846.js" crossorigin="anonymous"></script>
+    <link rel="icon"
+          href='https://www.flaticon.com/download/icon/179309?icon_id=179309&author=196&team=196&keyword=Apple&pack=packs%2Flogotypes&style=107&format=png&color=&colored=2&size=512&selection=1&premium=0&type=standard&search=apple'
+          type="image/icon type">
 </head>
 <body>
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">Shop</a>
+        <a class="navbar-brand" href="{% url 'home:store' %}"><i class="fa-solid fa-store"></i> Store</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active" aria-current="page"
-                                        href="{% url 'home:home' %}">Home</a></li>
+                                        href="{% url 'home:home' %}"><i class="fa-solid fa-house"></i></a></li>
                 {% if request.user.is_authenticated %}
-                <li class="nav-item"><a class="nav-link" href="{% url 'accounts:user_logout' %}">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:user_logout' %}"><i
+                            class="fa-solid fa-right-from-bracket"></i></a></li>
+                    <li class="nav-item d-flex justify-content-end"><a class="nav-link"
+                                                                       href="{% url 'accounts:user_logout' %}"><i
+                            class="fa-solid fa-user"></i></a></li>
                 {% else %}
-                <li class="nav-item"><a class="nav-link" href="{% url 'accounts:user_login' %}">Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'accounts:user_register' %}">Register</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:user_login' %}"><i
+                            class="fa-solid fa-right-to-bracket"></i></a></li>
+
                 {% endif %}
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
