Accounts | verify.html | Add messages to this page

--- a/shop_django/M/accounts/templates/accounts/verify.html
+++ b/shop_django/M/accounts/templates/accounts/verify.html
@@ -19,6 +19,12 @@
     </style>
 </head>
 <body>
+{% if messages %}
+    {% for msg in messages %}
+        <p class="alert alert-{{ msg.tags }}">{{ msg }}</p>
+    {% endfor %}
+
+{% endif %}
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
