--- a/shop_django/M/home/templates/home/index.html
+++ b/shop_django/M/home/templates/home/index.html
@@ -53,6 +53,20 @@
                         {% for category in categories %}
                             <li><a class="dropdown-item" href="{{ category.get_absolute_url }}">{{ category.name }}</a>
                             </li>
+
+                            <div class="btn-group">
+                                <a href="" type="button" class="btn btn-danger">Action</a>
+                                <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                    <span class="visually-hidden">Toggle Dropdown</span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                </ul>
+                            </div>
                         {% endfor %}
                     </ul>
                 </li>
