--- a/shop_django/M/home/templates/home/index.html
+++ b/shop_django/M/home/templates/home/index.html
@@ -85,40 +85,15 @@
                             </li>
                         {% endfor %}
 
-
-
-
-
-
-                        {#                            <li><a class="dropdown-item" href="{{ category.get_absolute_url }}">{{ category.name }}</a>#}
-                        {#                            </li>#}
-
-                        {#                            <div class="btn-group">#}
-                        {#                                <a href="{{ category.get_absolute_url }}" type="button"#}
-                        {#                                   class="btn btn-secondary">{{ category.name }}</a>#}
-                        {#                                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"#}
-                        {#                                        data-bs-toggle="dropdown" aria-expanded="false">#}
-                        {#                                    <span class="visually-hidden">Toggle Dropdown</span>#}
-                        {#                                </button>#}
-                        {#                                <ul class="dropdown-menu">#}
-                        {#                                    {% for sub in category.scategory.all %}#}
-                        {#                                        <li><a class="dropdown-item" href="#">{{ sub.name }}</a></li>#}
-                        {#                                    {% endfor %}#}
-                        {#                                    <li>#}
-                        {#                                        <hr class="dropdown-divider">#}
-                        {#                                    </li>#}
-                        {#                                </ul>#}
-                        {#                            </div>#}
-
                     </ul>
                 </li>
             </ul>
             <form class="d-flex">
-                <button class="btn btn-outline-light" type="submit">
+                <a href="{% url 'orders:cart' %}" class="btn btn-outline-light" type="submit">
                     <i class="bi-cart-fill me-1"></i>
                     Cart
                     <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                </button>
+                </a>
             </form>
         </div>
     </div>
