Home | index.html | Edit index

--- a/shop_django/M/home/templates/home/index.html
+++ b/shop_django/M/home/templates/home/index.html
@@ -92,7 +92,7 @@
                 <a href="{% url 'orders:cart' %}" class="btn btn-outline-light" type="submit">
                     <i class="bi-cart-fill me-1"></i>
                     Cart
-                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+{#                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>#}
                 </a>
             </form>
         </div>
