--- a/shop_django/M/orders/templates/orders/cart.html
+++ b/shop_django/M/orders/templates/orders/cart.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Shopping Cart</title>
+    <script src="https://kit.fontawesome.com/5d2b8db846.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -33,7 +34,6 @@
 {% for item in cart %}
                 <div class="card mb-4">
                     <div class="card-body p-4">
-
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <img src="{{ item.product.image.url }}"
@@ -45,14 +45,14 @@
                                     <p class="lead fw-normal mb-0">{{ item.product }}</p>
                                 </div>
                             </div>
-                            <div class="col-md-2 d-flex justify-content-center">
-                                <div>
-                                    <p class="small text-muted mb-4 pb-2">Color</p>
-                                    <p class="lead fw-normal mb-0"><i class="fas fa-circle me-2"
-                                                                      style="color: #fdd8d2;"></i>
-                                        pink rose</p>
-                                </div>
-                            </div>
+{#                            <div class="col-md-2 d-flex justify-content-center">#}
+{#                                <div>#}
+{#                                    <p class="small text-muted mb-4 pb-2">Color</p>#}
+{#                                    <p class="lead fw-normal mb-0"><i class="fas fa-circle me-2"#}
+{#                                                                      style="color: #fdd8d2;"></i>#}
+{#                                        pink rose</p>#}
+{#                                </div>#}
+{#                            </div>#}
                             <div class="col-md-2 d-flex justify-content-center">
                                 <div>
                                     <p class="small text-muted mb-4 pb-2">Quantity</p>
@@ -71,6 +71,12 @@
                                     <p class="lead fw-normal mb-0">${{ item.total_price }}</p>
                                 </div>
                             </div>
+                             <div class="col-md-2 d-flex justify-content-center">
+                                <div>
+                                    <p class="small text-muted mb-4 pb-2">Remove</p>
+                                    <a href="{% url 'orders:cart_remove' item.product.id %}"><i class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
@@ -82,7 +88,7 @@
                         <div class="float-end">
                             <p class="mb-0 me-5 d-flex align-items-center">
                                 <span class="small text-muted me-2">Order total:</span> <span
-                                    class="lead fw-normal">$799</span>
+                                    class="lead fw-normal">${{ cart.get_total_price }}</span>
                             </p>
                         </div>
 
