--- a/shop_django/M/home/templates/home/home.html
+++ b/shop_django/M/home/templates/home/home.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'accounts:user_logout' %}"><i
                             class="fa-solid fa-right-from-bracket"></i></a></li>
                     <li class="nav-item d-flex justify-content-end"><a class="nav-link"
-                                                                       href="{% url 'accounts:user_logout' %}"><i
+                                                                       href="{% url 'accounts:user_profile' request.user.id %}"><i
                             class="fa-solid fa-user"></i></a></li>
                 {% else %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'accounts:user_login' %}"><i
