Accounts | edit_profile.html | Change class of section

--- a/shop_django/M/accounts/templates/accounts/edit_profile.html
+++ b/shop_django/M/accounts/templates/accounts/edit_profile.html
@@ -49,7 +49,7 @@
     </div>
 </nav>
 
-<section class="bg-dark mt-5">
+<section class="bg-dark vh-100">
     <div class="container pt-5">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
