--- a/shop_django/M/accounts/templates/accounts/profile.html
+++ b/shop_django/M/accounts/templates/accounts/profile.html
@@ -8,7 +8,7 @@
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://kit.fontawesome.com/5d2b8db846.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/5d2b8db846.js" crossorigin="anonymous"></script>
     <link rel="icon"
           href='https://www.flaticon.com/download/icon/179309?icon_id=179309&author=196&team=196&keyword=Apple&pack=packs%2Flogotypes&style=107&format=png&color=&colored=2&size=512&selection=1&premium=0&type=standard&search=apple'
           type="image/icon type">
@@ -49,8 +49,14 @@
         </div>
     </div>
 </nav>
+{% if messages %}
+    {% for msg in messages %}
+        <p class="alert alert-{{ msg.tags }}">{{ msg }}</p>
+    {% endfor %}
 
-<section class="bg-dark">
+{% endif %}
+
+<section class="bg-dark vh-100">
     <div class="container py-5">
         <div class="row">
             <div class="col-lg-4">
