--- a/shop_django/M/orders/templates/orders/cart.html
+++ b/shop_django/M/orders/templates/orders/cart.html
@@ -97,7 +97,7 @@
 
                 <div class="d-flex justify-content-end">
                     <a href="{% url 'home:store' %}" class="btn btn-light btn-lg me-2">Back to Store</a>
-                    <a href="#" class="btn btn-primary btn-lg">Check Out</a>
+                    <a href="{% url 'orders:order_create' %}" class="btn btn-primary btn-lg">Check Out</a>
                 </div>
 
             </div>
