Order | cart.html | Edit cart.html

--- a/shop_django/M/orders/templates/orders/cart.html
+++ b/shop_django/M/orders/templates/orders/cart.html
@@ -25,7 +25,7 @@
     {#    </style>#}
 </head>
 <body>
-<section class="h-100" style="background-color: #fdccbc;">
+<section class="vh-100" style="background-color: #fdccbc;">
     <div class="container">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col">
